Added nav bar and off campus navigation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
     </div>
 
   </div>
-  
+
   <!-- Initialize Foundation -->
   <script>
     $(document).foundation();
@@ -28,3 +28,6 @@
 
 
 </footer>
+<!-- close wrapper, no more content after this -->
+</div>
+</div>
