--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <article class="post">
-
+<div class="row">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
@@ -10,5 +10,5 @@ layout: default
   <div class="post-content">
     {{ content }}
   </div>
-
+</div>
 </article>
