--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 {% include navigation.html %}
 
-<header class="site-header">
-
+<header class="row">
+    <h1><a href="{{ my_page.url | prepend: site.baseurl }}">{{ site.title }}</a></h1>
+    <h2><small>{{ site.description }}</small></h2>
 
 </header>
