Added social media icon and link support

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,24 +1,31 @@
 <footer class="site-footer">
 
   <div class="row">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
+    <div class="large-4 columns">
+      <h4>Site Information</h4>
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
+          <p>{{site.description}}</p>
+      
     </div>
+    <div class="large-4 columns">
+      <h4>Social Media</h4>
+        <h2>
+            {% for social in site.socialmedia %}
+              {% if social[1] %}
+               <a href="{{ social[1] }}" target="_blank" title="{{ social[0] }}"><i class="fi-social-{{ social[0] }}"></i></a>
+              {% endif %}
+            {% endfor %}
+      </h2>
+    </div>
+    <div class="large-4 columns">
 
+      
+    </div>
+  </div>
+  <div class="row text-center">
+    <p>Powered by <a href="https://jekyllrb.com/">Jekyll</a>. <a href="">Barebones Foundation Theme</a> by <a href="">Christina Branson</a>.</p>
+    
   </div>
 
   <!-- Initialize Foundation -->
