Added more links to navigation page

--- a/_includes/navigation-manual.html
+++ b/_includes/navigation-manual.html
@@ -26,11 +26,20 @@
       <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
           <li class="menu-text"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></li>
+          <li><a href="https://personal-portfolio-chrissybranso.c9users.io/blog/">Blog</a></li>
           <li class="has-submenu">
-            <a href="#">Examples</a>
+            <a href="https://personal-portfolio-chrissybranso.c9users.io/blog/">Blog</a>
             <ul class="menu submenu vertical" data-submenu>
-              <li><a href="left_wide_11">Orbit Slider</a></li>
-              <li><a href="left_wide_12">Full Width Page</a></li>
+              <li><a href="https://personal-portfolio-chrissybranso.c9users.io/blog/archive/">Archive</a></li>
+            </ul>
+          </li>
+          <li class="has-submenu">
+            <a href="https://personal-portfolio-chrissybranso.c9users.io/examples/">Examples</a>
+            <ul class="menu submenu vertical" data-submenu>
+              <li><a href="https://personal-portfolio-chrissybranso.c9users.io/examples/orbit/">Orbit Slider</a></li>
+              <li><a href="https://personal-portfolio-chrissybranso.c9users.io/examples/full-width-page/">Full Width Page</a></li>
+              <li><a href="https://personal-portfolio-chrissybranso.c9users.io/examples/feature/">Feature Page</a></li>
+              <li><a href="https://personal-portfolio-chrissybranso.c9users.io/examples/style/">Style Guide</a></li>
             </ul>
           </li>
         </ul>
