--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
-{% include navigation.html %}
+
+{% include navigation-manual.html %}
 
 <header class="row">
     <h1><a href="{{ my_page.url | prepend: site.baseurl }}">{{ site.title }}</a></h1>
