--- a/_includes/orbit.html
+++ b/_includes/orbit.html
@@ -1,11 +1,10 @@
 <!-- Foundation Orbit: http://foundation.zurb.com/sites/docs/orbit.html -->
 
 
-<div class="orbit" role="region" data-orbit>
+<div class="orbit" role="region" data-orbit data-use-m-u-i="false">
   <ul class="orbit-container">
     <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
     <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
-    
     {% for item in page.gallery %}
     <li class="orbit-slide">
       <img class="orbit-image" src="{{ item.image_url }}" alt="{{ item.image_alt }}">
